--- a/package.json
+++ b/package.json
@@ -1,20 +1,35 @@
 {
-  "name": "react-modals",
+  "name": "react-modals-jave",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
+  "sideEffects": false,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "rollup --config rollup.config.js -w",
+    "build": "rollup --config rollup.config.js --environment NODE_ENV:production"
   },
   "keywords": [],
   "author": "javeoff",
   "license": "ISC",
   "dependencies": {
     "immer": "^9.0.16",
-    "react": "^18.2.0",
-    "react-utils-jave": "^1.0.0"
+    "react": "^18.0.0",
+    "react-utils-jave": "^1.0.0",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.25"
+    "@swc/core": "^1.3.14",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@types/jest": "^29.2.2",
+    "@types/node": "^18.11.7",
+    "@types/react": "^18.0.25",
+    "rollup": "^2.66",
+    "rollup-plugin-swc": "^0.2.1",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "typescript": "^4.8.4"
+  },
+  "peerDependencies": {
+    "@swc/core": "^1.3.14",
+    "react": "^16.8.0  || ^17.0.0 || ^18.0.0"
   }
 }
