--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-modals-jave",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
   "main": "dist/index.js",
   "sideEffects": false,
@@ -18,6 +18,7 @@
     "rollup-plugin-terser": "^7.0.2"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^23.0.2",
     "@swc/core": "^1.3.14",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.2.2",
@@ -26,6 +27,7 @@
     "rollup": "^2.66",
     "rollup-plugin-swc": "^0.2.1",
     "rollup-plugin-typescript2": "^0.34.1",
+    "tslib": "^2.4.1",
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
