--- a/example/package.json
+++ b/example/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "esbuild ./index.jsx --bundle --minify --outfile=public/bundle.js"
+    "build": "esbuild ./index.jsx --bundle --minify --outfile=./public/bundle.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,6 @@
     "esbuild": "^0.15.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-modals-jave": "*"
+    "react-modals-jave": "^1.0.8"
   }
 }
