--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-modals-jave",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "",
   "main": "dist/index.js",
   "sideEffects": false,
@@ -11,13 +11,11 @@
   "keywords": [],
   "author": "javeoff",
   "license": "ISC",
-  "dependencies": {
-    "immer": "^9.0.16",
-    "react": "^18.0.0",
-    "react-utils-jave": "^1.0.3",
-    "rollup-plugin-terser": "^7.0.2"
-  },
   "devDependencies": {
+    "react": "^18.0.0",
+    "immer": "^9.0.16",
+    "react-utils-jave": "^1.0.3",
+    "rollup-plugin-terser": "^7.0.2",
     "@rollup/plugin-commonjs": "^23.0.2",
     "@swc/core": "^1.3.14",
     "@testing-library/react-hooks": "^8.0.1",
@@ -31,7 +29,6 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "@swc/core": "^1.3.14",
     "react": "^16.8.0  || ^17.0.0 || ^18.0.0"
   }
 }
